# c3d-to-bvh

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
src/: CMakeLists.txt  bvh_converter.cpp  bvh_converter_test.cpp  bvh_viewer.cpp  filesystem.h
src/c3d/: C3DMotionClipPlayer.h  PointMotionClip.cpp  PointMotionClip.h
